# paper2audio

./: LICENSE  README.md  pyproject.toml
examples/: Chen et al. - 2024 - Orion-14B Open-source Multilingual Large Language Models.html
paper2audio/: __main__.py  audio.py  generate.py  html.py  text.py
